<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:menu="@menu/main_menu"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:srcCompat="@drawable/header" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/darkblue"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/dil_menu"
            app:navigationIcon="@drawable/ikonmenu" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="202dp">

        </androidx.viewpager.widget.ViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkblue"
            android:orientation="horizontal">

            <Button
                android:id="@+id/akademiktakvim"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/akademiktakvim"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darkblue" />

            <Button
                android:id="@+id/dersprogrami"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dersprog"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darkblue" />

            <Button
                android:id="@+id/sinavprogrami"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sınavprog"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darkblue" />

        </LinearLayout>


        <GridLayout
            android:id="@+id/gridlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:columnCount="2"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/duyurular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@color/lightblue"
                android:clickable="false"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logoduyurular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/duyurular"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/etkinlikler"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logoetkinlikler" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/etkinlikler"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/seckiler"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@color/lightblue"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logoseckiler" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/seçkiler"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/muhendislik"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@color/lightblue"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logomuhendislik" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/muhendislik"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/obs"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@color/lightblue"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logoankarauni" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/obs"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/telgraf"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                android:background="@color/lightblue"
                app:cardBackgroundColor="@color/lightblue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logotelgraf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/telgraf"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>